# donkey_kong_1981

./: .gitignore  README.md  build.sh
donkeykong/: meson.build
donkeykong/assets/: animations.xml  dkconfig.xml  gameprops.xml  gameprops_template.xml  mario.xml
donkeykong/assets/levels/: barrels0.xml  classic_factory.xml  custom0.xml  testlevel.xml
donkeykong/assets/props/: prop.xml
donkeykong/assets/rc/: engine.rc
donkeykong/assets/spritesheets/: belt.spritesheet  blue_double_ladder.spritesheet  blue_single_ladder.spritesheet  girder.spritesheet  kong_climb_pauline.spritesheet  ladder.spritesheet  long_conveyor.spritesheet  mario.spritesheet  mario_climb.spritesheet  mario_climb_idle.spritesheet  mario_climb_off.spritesheet  mario_climb_on.spritesheet  mario_idle.spritesheet  mario_run.spritesheet  oil_barrel.spritesheet  oil_flames.spritesheet  orange_girder.spritesheet  red_girder_28x1.spritesheet  red_girder_bottom_slope.spritesheet  red_girder_long_flat.spritesheet  script  (+10 more)
donkeykong/docs/: Levels  SpritesNAnimations  WorldProps  todo
donkeykong/include/: Animation.h  AnimationFactory.h  ControlScheme.h  Defines.h  DonkeyKong.h  Donkeykong.h  GameActor.h  GameLevel.h  GameObject.h  GamePlatform.h  GameProp.h  GamePropFactory.h  Level.h  Mario.h  MarioFactory.h  PlayState.h  Prop.h  PropFactory.h  Transition.h
donkeykong/source/: Animation.cpp  AnimationFactory.cpp  DonkeyKong.cpp  GameActor.cpp  GameLevel.cpp  GameProp.cpp  GamePropFactory.cpp  Level.cpp  Main.cpp  Mario.cpp  MarioFactory.cpp  PlayState.cpp  Prop.cpp  PropFactory.cpp  Transition.cpp
(+1 files in other folders)
